# perfect-workflow-playground

./: .gitignore  .prefectignore  Dockerfile.agent  Dockerfile.serve  Dockerfile.worker  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
prefect_workflow/: config.py
prefect_workflow/flows/: env_info.py
prefect_workflow/shared/: pc_info.py
tutorials/: T0001.py  T0002.py  T0003_flow_in_flow.py  T0004_pc_info.py  T0005_submit_future.py
