[tool.poetry]
name = "prefect-workflow"
version = "0.2.0"
description = ""
authors = ["Allen Chou <f1470891079@gmail.com>"]
readme = "README.md"
packages = [{include = "prefect_workflow"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.0"
pytz = "*"
rich = "*"
urllib3 = "1.26.16"
prefect = "2.*"
prefect-dask = "0.*"
prefect-openai = "0.*"
filelock = "3.*"
gcsfs = "*"


[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
